src/test/ui/error-codes/E0283.stderr
error[E0283]: type annotations needed
  --> $DIR/E0283.rs:30:21
   |
LL |     let cont: u32 = Generator::create();
   |                     ^^^^^^^^^^^^^^^^^ cannot call trait method as a free function

error[E0283]: type annotations needed
  --> $DIR/E0283.rs:35:24
   |
LL |     let bar = foo_impl.into() * 1u32;
   |                        ^^^^ cannot call trait method as a free function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
